--- a/talent-connect-swap-main/index.html
+++ b/talent-connect-swap-main/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>talent-connect-swap</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>SkillSwap - Connect & Learn</title>
+    <meta name="description" content="Join our vibrant community where knowledge flows freely. Teach what you know, learn what you don't." />
+    <meta name="author" content="SkillSwap" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-    <meta property="og:title" content="talent-connect-swap" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="SkillSwap - Connect & Learn" />
+    <meta property="og:description" content="Join our vibrant community where knowledge flows freely. Teach what you know, learn what you don't." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="SkillSwap - Connect & Learn" />
+    <meta name="twitter:description" content="Join our vibrant community where knowledge flows freely. Teach what you know, learn what you don't." />
   </head>
 
   <body>
